<resources>
    <string name="app_name">CashApp</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="ganti_password"><u>Ganti Password</u></string>
    <string name="pengaturan">Pengaturan</string>
    <string name="password_star">********</string>
    <string name="profile_detail">
        Aplikasi ini dibuat oleh: \nNama: Putranda Bagus C. L. \nNIM: 1841720169 \nTanggal: 27 Juli 2022
    </string>
    <string name="simpan_txt">Simpan</string>
    <string name="kembali_txt"><![CDATA[<< Kembali]]></string>
</resources>