<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/profile_layout"
        android:layout_margin="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pengaturan"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ganti_password"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tv_old_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password saat ini"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_star"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tv_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Password Baru"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_star"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <TextView
            android:id="@+id/tv_confirm_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Konfirmasi Password Baru"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edit_confirm_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_star"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <Button
                android:id="@+id/btn_simpan_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/simpan_txt"/>
            <Button
                android:id="@+id/btn_back_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/orange"
                android:text="@string/kembali_txt"/>
        </LinearLayout>
    </LinearLayout>

    <!--        Layout About-->
    <LinearLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="horizontal">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/pasfoto_1841720169_kotak"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:paddingLeft="15dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="About this App.."/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/profile_detail"/>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>